--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <div class="middle-container">
     <div class="profile">
       <img class="deadpool" src="images/deadpool.png" alt="deadpool-icon">
-      <h2>Aa gaye?</h2>
-      <p>naalle logo ki naalli website, kya karega aage dekh ke bhai-bhai-bhai-bhai.</p>
+      <h2>Hello!</h2>
+      <p>welcome to my small, personal website</p>
     </div>
     <hr>
     <div class="skills">
@@ -32,27 +32,27 @@
       <div class="skill-row">
         <img class="computer" src="images/computer.png" alt="computer-image">
         <h3>Programming</h3>
-        <p>Dekho bhai, programming ke naam pe hamne ghanta kuch nahi ukhada hai. Bas thodi si C aur C++ aati hai, kaam khatam. Abhi aur sikhenge.🤟🏼</p>
+        <p>Currently, C and C++ are my forte. I achieved 5 stars in problem solving on hackerrank recently and continuing ot learn more.</p>
       </div>
       <div class="skill-row">
         <img class="chilli" src="images/chillies.png" alt="chillies-image">
         <h3>Web Development</h3>
-        <p>Ab ye website dekh ke pata chalta hai ki mujhe HTML & CSS ka thoda gyaan toh hai, lekin bas itna hi. Iske aage sikhunga.</p>
+        <p>I know  HTML5 and CSS3. Also javascript is under progress.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Agar kisi ko kuch puchna ho toh.</h3>
-      <p>Kya kar loge puch ke, mujhe kuch aata nahi hai, lekin phir bhi karna hai toh ye lo.</p>
+      <h3>If you want to know more.</h3>
+      <p>I currently don't have much to offer but I would be more than happy to learn a new skill.</p>
       <a href="#" class="BUTTON_QXI">Contact Me</a>
     </div>
   </div>
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn  </a>
-    <a class="footer-link" href="https://twitter.com/">Twitter  </a>
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn </a>
+    <a class="footer-link" href="https://twitter.com/">Twitter </a>
     <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
     <p>© 2021 Gaurav Shah.</p>
   </div>
